# bananagrams-solver

./: .gitignore  58k-words.txt  LICENSE  README.md  analysis.py  board.py  build_dataset.py  encode_sequence.py  featureSelection.py  filterwords.py  main.py  player.py  preds.pkl  pyproject.toml  run_simulations.py  timePrediction.py  transformDist.py  truth.pkl  word.py
bgsolver/: 56k_valid_words.txt  board.py  main.py  player.py  word.py
data/10000_games/: letters.csv  words.csv
src/: board.py
tests/: test_player.py
